# esp32_camera_web_streaming

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild
main/src/: camera_driver.c  camera_driver.h  http_server.c  http_server.h  main.c  sdcard_fatfs_manager.c  sdcard_fatfs_manager.h  wifi_manager.c  wifi_manager.h
